2004-05-26  Jeffrey Stedfast  <fejj@novell.com>

	Fix for bug #57818.

	* gui/e-tasks.c (setup_widgets): Same.

	* gui/gnome-cal.c (setup_widgets): Updated to pass a set of
	bitflags to cal_search_bar_new().

	* gui/cal-search-bar.c (cal_search_bar_new): Now takes a bit flag
	argument specifying which search options to present.
	(cal_search_bar_construct): Same as above. Construct the search
	menu to use based on the bit flags.

	* gui/apps_evolution_calendar.schemas.in.in: Changed the default
	"Tasks due today" colour to be a light-blue (one of the default
	colour values in the colour picker dialog). Fixes bug #53412.

2004-05-26  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #57759

	* gui/gnome-cal.c (gnome_calendar_remove_source_by_uid): remove all
	queries we've got for the removed source.

2004-05-26  Kidd Wang  <kidd.wang@sun.com>

	* gui/e-week-view.c: (e_week_view_event_move),
	(e_week_view_change_event_time): In week view all-day events should
	keep all-dayness when moved around.

2004-05-25  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c: remove now unused functions.
	(source_group_can_add): fix can add logic, remove more unused
	functions.

	* gui/dialogs/calendar-setup.c (calendar_setup_edit_task_list):
	use the new dialog.
	(calendar_setup_edit_calendar): use the new dialog.
	(key_press_event): look for escape press and destroy dialog.

2004-05-25  Jeffrey Stedfast  <fejj@novell.com>

	* gui/dialogs/url-editor-dialog.c (init_widgets): Use
	gtk_window_set_icon_list() here instead of gtk_window_set_icon().

	* gui/dialogs/select-source-dialog.c (select_source_dialog): Use
	gtk_window_set_icon_list() here instead of gtk_window_set_icon().

	* gui/dialogs/calendar-setup.c (source_to_dialog): Huh?? Why are
	integer colours in an array of char*? Fixed to be an array of
	guint32.

	* gui/dialogs/changed-comp.c (changed_component_dialog): Use
	gtk_window_set_icon_list() here instead of gtk_window_set_icon().
